# paddlepaddle_ascend910

./: .gitignore  CMakeLists.txt  MNIST.py  readme.md  setup.py  setup.py.in
kernels/: accuracy_kernel.cc  activation_kernel.cc  adam_kernel.cc  add_kernel.cc  argsort_kernel.cc  batch_norm_kernel.cc  cast_kernel.cc  compare_kernel.cc  conv2d_kernel.cc  flatten_kernel.cc  full_kernel.cc  gaussian_random_kernel.cc  matmul_kernel.cc  mean_all_kernel.cc  merged_momentum_kernel.cc  moment_kernel.cc  momentum_kernel.cc  multiply_kernel.cc  npu_elementwise_funcs.h  npu_enforce.h  npu_funcs.h  npu_op_runner.cc  npu_op_runner.h  pool2d_kernel.cc  reduce_max_kernel.cc  reduce_mean_kernel.cc  reduce_min_kernel.cc  reduce_sum_kernel.cc  relu_kernel.cc  reshape2_kernel.cc  scale_kernel.cc  sgd_kernel.cc  slice_kernel.cc  softmax_kernel.cc  softmax_with_cross_entropy_kernel.cc  top_k_kernel.cc  uniform_random_kernel.cc  where_index_kernel.cc  where_kernel.cc
patches/: ascend_kernel.cc  ascend_kernel.h  ascend_sig.cc  paddle_ascend.patch  plugin.patch
patches/cpu_kernel_patch/: adam_kernel.cc  adam_kernel.h  adam_sig.cc  merged_momentum_kernel.cc  merged_momentum_kernel.h  momentum_kernel.cc  momentum_kernel.h  momentum_sig.cc  slice_grad_kernel.cc  slice_grad_kernel.h  slice_kernel.cc  slice_kernel.h  slice_sig.cc  softmax_with_cross_entropy_grad_kernel.cc  softmax_with_cross_entropy_grad_kernel.h  softmax_with_cross_entropy_kernel.cc  softmax_with_cross_entropy_kernel.h  softmax_with_cross_entropy_sig.cc
runtime/: runtime.cc  runtime.h
tests/: test_MNIST_model.py
